--- a/unityplatform-microdemo/demo-domain/pom.xml
+++ b/unityplatform-microdemo/demo-domain/pom.xml
@@ -16,6 +16,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.zhikuntech.intellimonitor</groupId>
+            <artifactId>demo-data</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
