--- a/unityplatform-microdemo/demo-facade/pom.xml
+++ b/unityplatform-microdemo/demo-facade/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>demo-facade</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.zhikuntech.intellimonitor</groupId>
+            <artifactId>demo-prototype</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
