--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,11 @@
 
     <dependencyManagement>
         <dependencies>
-
+            <dependency>
+                <groupId>com.zhikuntech.intellimonitor</groupId>
+                <artifactId>demo-facade</artifactId>
+                <version>${intelli-monitor.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
