--- a/unityplatform-microwindpowerforecast/windpowerforecast-app/pom.xml
+++ b/unityplatform-microwindpowerforecast/windpowerforecast-app/pom.xml
@@ -12,6 +12,11 @@
     <artifactId>windpowerforecast-app</artifactId>
 
     <dependencies>
+        <!-- Eureka Client -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.zhikuntech.intellimonitor</groupId>
             <artifactId>windpowerforecast-domain</artifactId>
