--- a/unityplatform-microgateway/gateway-app/pom.xml
+++ b/unityplatform-microgateway/gateway-app/pom.xml
@@ -11,5 +11,16 @@
 
     <artifactId>gateway-app</artifactId>
 
+    <dependencies>
+        <!-- Eureka Client -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.zhikuntech.intellimonitor</groupId>
+            <artifactId>gateway-domain</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
