首页模块添加

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <!-- 数据库版本控制(flyway) -->
         <module>unityplatform-microdbversioncontrol</module>
         <module>unityplatform-microregistrycenter</module>
+        <module>unityplatform-micromainpage</module>
     </modules>
 
     <properties>
