--- a/intelli-monitor-parent/pom.xml
+++ b/intelli-monitor-parent/pom.xml
@@ -20,6 +20,8 @@
         <cloud-alibaba.version>2.2.3.RELEASE</cloud-alibaba.version>
         <lombok.version>1.18.6</lombok.version>
         <mapstruct.version>1.2.0.Final</mapstruct.version>
+        <knife4j.version>2.0.7</knife4j.version>
+        <mybatis-plus.version>3.4.2</mybatis-plus.version>
     </properties>
 
     <!-- 管理所有外部依赖 -->
@@ -65,6 +67,20 @@
                 <version>${mapstruct.version}</version>
             </dependency>
             <!-- END MAP STRUCT DO/DTO/VO/PO 等属性之间转换     -->
+            <!-- swagger -->
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>knife4j-spring-boot-starter</artifactId>
+                <version>${knife4j.version}</version>
+            </dependency>
+            <!-- swagger -->
+            <!-- mybatis-plus -->
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatis-plus.version}</version>
+            </dependency>
+            <!-- mybatis-plus -->
         </dependencies>
     </dependencyManagement>
 
@@ -75,5 +91,21 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 
 </project>
