--- a/unityplatform-microwindpowerforecast/windpowerforecast-domain/pom.xml
+++ b/unityplatform-microwindpowerforecast/windpowerforecast-domain/pom.xml
@@ -25,6 +25,16 @@
             <artifactId>mybatis-plus-boot-starter</artifactId>
         </dependency>
         <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>persistence-api</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <!-- MySql -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-spring-boot-starter</artifactId>
         </dependency>
@@ -32,6 +42,19 @@
             <groupId>com.zhikuntech.intellimonitor</groupId>
             <artifactId>demo-facade</artifactId>
         </dependency>
+
+        <!--   mybatis-plus generator     -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-generator</artifactId>
+            <version>3.4.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.31</version>
+        </dependency>
+
     </dependencies>
 
 
