feat 添加风机scada模块

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>unityplatform-microdbversioncontrol</module>
         <module>unityplatform-microregistrycenter</module>
         <module>unityplatform-micromainpage</module>
+        <module>unityplatform-microfanscada</module>
     </modules>
 
     <properties>
