--- a/intelli-monitor-parent/pom.xml
+++ b/intelli-monitor-parent/pom.xml
@@ -28,6 +28,7 @@
         <golden.version>3.0.34</golden.version>
         <commons-logging.version>1.1.1</commons-logging.version>
         <commons-beanutils.version>1.8.3</commons-beanutils.version>
+        <commons-io.version>2.6</commons-io.version>
         <protobuf-java.version>2.6.1</protobuf-java.version>
     </properties>
 
@@ -100,6 +101,12 @@
                 <!--<version>${easypoi.version}</version>-->
             <!--</dependency>-->
             <!--easy poi-->
+            <!-- commons utils -->
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>${commons-io.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
