--- a/unityplatform-microwindpowerforecast/windpowerforecast-domain/pom.xml
+++ b/unityplatform-microwindpowerforecast/windpowerforecast-domain/pom.xml
@@ -43,6 +43,17 @@
             <artifactId>demo-facade</artifactId>
         </dependency>
 
+        <!--   commons utils     -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
+
+
         <!--   mybatis-plus generator     -->
         <dependency>
             <groupId>com.baomidou</groupId>
