--- a/unityplatform-microfanscada/fanscada-data/pom.xml
+++ b/unityplatform-microfanscada/fanscada-data/pom.xml
@@ -9,8 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>fanscada-facade</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>fanscada-data</artifactId>
+
 
 
 </project>
