--- a/unityplatform-microfanscada/fanscada-app/pom.xml
+++ b/unityplatform-microfanscada/fanscada-app/pom.xml
@@ -11,5 +11,16 @@
 
     <artifactId>fanscada-app</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.zhikuntech.intellimonitor</groupId>
+            <artifactId>fanscada-domain</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+    </dependencies>
+
 
 </project>
