--- a/unityplatform-microfanscada/pom.xml
+++ b/unityplatform-microfanscada/pom.xml
@@ -11,14 +11,24 @@
 
     <artifactId>unityplatform-microfanscada</artifactId>
     <packaging>pom</packaging>
-    <modules>
 
+    <modules>
         <module>fanscada-data</module>
         <module>fanscada-app</module>
         <module>fanscada-domain</module>
         <module>fanscada-prototype</module>
         <module>fanscada-facade</module>
     </modules>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.zhikuntech.intellimonitor</groupId>
+                <artifactId>fanscada-domain</artifactId>
+                <version>${intelli-monitor.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 
 </project>
