--- a/unityplatform-microfanscada/fanscada-domain/pom.xml
+++ b/unityplatform-microfanscada/fanscada-domain/pom.xml
@@ -29,19 +29,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
-  <!--      &lt;!&ndash;golden相关依赖-[start]&ndash;&gt;
+        <!--golden相关依赖-[start]-->
         <dependency>
             <groupId>com.golden</groupId>
             <artifactId>golden-java-sdk</artifactId>
             <version>${golden.version}</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/golden-java-sdk-3.0.34.jar</systemPath>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
