--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
                 <artifactId>demo-facade</artifactId>
                 <version>${intelli-monitor.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.zhikuntech.intellimonitor</groupId>
+                <artifactId>core-commons</artifactId>
+                <version>${intelli-monitor.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
