--- a/unityplatform-microfanscada/fanscada-domain/pom.xml
+++ b/unityplatform-microfanscada/fanscada-domain/pom.xml
@@ -57,6 +57,12 @@
             <version>${protobuf-java.version}</version>
         </dependency>
         <!--golden相关依赖-[end]-->
+
+        <dependency>
+            <groupId>com.zhikuntech.intellimonitor</groupId>
+            <artifactId>core-commons</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-spring-boot-starter</artifactId>
