--- a/unityplatform-micromainpage/mainpage-domain/pom.xml
+++ b/unityplatform-micromainpage/mainpage-domain/pom.xml
@@ -70,6 +70,10 @@
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.zhikuntech.intellimonitor</groupId>
+            <artifactId>core-commons</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
