--- a/unityplatform-microwindpowerforecast/windpowerforecast-domain/pom.xml
+++ b/unityplatform-microwindpowerforecast/windpowerforecast-domain/pom.xml
@@ -58,6 +58,10 @@
             <artifactId>commons-collections4</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.zhikuntech.intellimonitor</groupId>
+            <artifactId>core-commons</artifactId>
+        </dependency>
 
         <!--   mybatis-plus generator     -->
         <dependency>
