--- a/unityplatform-microwindpowerforecast/windpowerforecast-app/src/main/resources/application-local.yml
+++ b/unityplatform-microwindpowerforecast/windpowerforecast-app/src/main/resources/application-local.yml
@@ -19,7 +19,13 @@ spring:
 
 
 
+
 #knife4j:
 #  enable: true
+
+logging:
+  level:
+    com.zhikuntech.intellimonitor.windpowerforecast.domain.service: debug
+    com.zhikuntech.intellimonitor.windpowerforecast.domain.mapper: debug
 
 
