--- a/unityplatform-micromainpage/mainpage-app/src/main/resources/application-local.yml
+++ b/unityplatform-micromainpage/mainpage-app/src/main/resources/application-local.yml
@@ -1,3 +1,21 @@
+spring:
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/monitor-unityplatform?useUnicode=true&serverTimezone=Asia/Shanghai&characterEncoding=UTF-8&useSSL=false
+    username: root
+    password: 123456
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+mybatis:
+  mapper-locations: classpath:mapper/**/*.xml
+  type-aliases-package: com.zhikuntech.intellimonitor.mainpage.domain.model.*,com.zhikuntech.intellimonitor.mainpage.domain.po.*
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    map-underscore-to-camel-case: true
+
+logging:
+  level:
+    com.zhikuntech.intellimonitor.mainpage.domain.mapper: debug
 
 
 
