--- a/unityplatform-micromainpage/mainpage-app/src/main/resources/application-local.yml
+++ b/unityplatform-micromainpage/mainpage-app/src/main/resources/application-local.yml
@@ -1,6 +1,3 @@
-
-
-
 eureka:
   client:
     service-url:
@@ -8,6 +5,7 @@ eureka:
   instance:
     prefer-ip-address: true
     instance-id: ${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
+
 golden:
   ip: 1.117.33.103
   port: 6327
@@ -15,3 +13,9 @@ golden:
   password: golden
   poolSize: 25
   maxSize: 50
+
+spring:
+  redis:
+    database: 7
+    host: 192.168.3.179
+    port: 6379
