--- a/intelli-monitor-parent/pom.xml
+++ b/intelli-monitor-parent/pom.xml
@@ -31,6 +31,7 @@
         <commons-io.version>2.6</commons-io.version>
         <commons-collection4.version>4.4</commons-collection4.version>
         <protobuf-java.version>2.6.1</protobuf-java.version>
+        <druid.version>1.1.10</druid.version>
     </properties>
 
     <!-- 管理所有外部依赖 -->
@@ -114,6 +115,12 @@
                 <version>${commons-collection4.version}</version>
             </dependency>
             <!-- commons utils -->
+            <!--druid-->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid</artifactId>
+                <version>${druid.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
