--- a/unityplatform-micromainpage/mainpage-facade/pom.xml
+++ b/unityplatform-micromainpage/mainpage-facade/pom.xml
@@ -11,5 +11,15 @@
 
     <artifactId>mainpage-facade</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.zhikuntech.intellimonitor</groupId>
+            <artifactId>mainpage-prototype</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
