--- a/intelli-monitor-parent/pom.xml
+++ b/intelli-monitor-parent/pom.xml
@@ -121,6 +121,12 @@
                 <artifactId>druid</artifactId>
                 <version>${druid.version}</version>
             </dependency>
+<!--            fegin-->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-openfeign</artifactId>
+                <version>2.2.8.RELEASE</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
