--- a/unityplatform-microwindpowerforecast/windpowerforecast-domain/pom.xml
+++ b/unityplatform-microwindpowerforecast/windpowerforecast-domain/pom.xml
@@ -75,6 +75,17 @@
             <version>2.3.31</version>
         </dependency>
 
+        <!--   远程调用     -->
+        <dependency>
+            <groupId>com.zhikuntech.intellimonitor</groupId>
+            <artifactId>mainpage-facade</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.zhikuntech.intellimonitor</groupId>
+            <artifactId>fanscada-facade</artifactId>
+        </dependency>
+        <!--   远程调用     -->
+
     </dependencies>
 
 
