--- a/unityplatform-microfanscada/fanscada-app/src/main/resources/application-local.yml
+++ b/unityplatform-microfanscada/fanscada-app/src/main/resources/application-local.yml
@@ -12,7 +12,7 @@ spring:
 
 mybatis:
   mapper-locations: classpath:com.zhikuntech.intellimonitor.fanscada.domain.mapper/**/*.xml
-  type-aliases-package: com.zhikuntech.intellimonitor.mainpage.domain.model.*,com.zhikuntech.intellimonitor.mainpage.domain.po.*
+  type-aliases-package: com.zhikuntech.intellimonitor.fanscada.domain.pojo.*
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
     map-underscore-to-camel-case: true
