--- a/unityplatform-microfanscada/fanscada-app/src/main/resources/application-dev.yml
+++ b/unityplatform-microfanscada/fanscada-app/src/main/resources/application-dev.yml
@@ -3,8 +3,8 @@
 spring:
   datasource:
     url: jdbc:mysql://192.168.3.171:3306/monitor_sys?useUnicode=true&serverTimezone=Asia/Shanghai&characterEncoding=UTF-8&useSSL=false
-    username: root
-    password: 123456
+    username: develop
+    password: Aman@2020
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
   redis:
