--- a/unityplatform-micromainpage/mainpage-app/src/main/resources/application-local.yml
+++ b/unityplatform-micromainpage/mainpage-app/src/main/resources/application-local.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/monitor-unityplatform?useUnicode=true&serverTimezone=Asia/Shanghai&characterEncoding=UTF-8&useSSL=false
-    username: root
-    password: 123456
-    type: com.alibaba.druid.pool.DruidDataSource
+    type: com.zaxxer.hikari.HikariDataSource
+    url: jdbc:mysql://192.168.3.171:3306/monitor_sys?useUnicode=true&serverTimezone=Asia/Shanghai&characterEncoding=UTF-8&useSSL=false
+    username: develop
+    password: Aman@2020
     driver-class-name: com.mysql.cj.jdbc.Driver
   redis:
     database: 7
@@ -11,7 +11,7 @@ spring:
     port: 6379
 
 mybatis:
-  mapper-locations: classpath:com.zhikuntech.intellimonitor.fanscada.domain.mapper/**/*.xml
+  mapper-locations: classpath:mapper/**/*.xml
   type-aliases-package: com.zhikuntech.intellimonitor.mainpage.domain.model.*,com.zhikuntech.intellimonitor.mainpage.domain.po.*
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
