--- a/intelli-monitor-parent/pom.xml
+++ b/intelli-monitor-parent/pom.xml
@@ -32,6 +32,7 @@
         <commons-collection4.version>4.4</commons-collection4.version>
         <protobuf-java.version>2.6.1</protobuf-java.version>
         <druid.version>1.1.10</druid.version>
+        <jsch.version>0.1.55</jsch.version>
     </properties>
 
     <!-- 管理所有外部依赖 -->
