--- a/unityplatform-core/core-commons/pom.xml
+++ b/unityplatform-core/core-commons/pom.xml
@@ -33,6 +33,10 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>${jsch.version}</version>
+        </dependency>
     </dependencies>
-
 </project>
