--- a/intelli-monitor-parent/pom.xml
+++ b/intelli-monitor-parent/pom.xml
@@ -33,6 +33,7 @@
         <protobuf-java.version>2.6.1</protobuf-java.version>
         <druid.version>1.1.10</druid.version>
         <openfegin.version>2.2.8.RELEASE</openfegin.version>
+        <easyexcel.version>2.1.1</easyexcel.version>
     </properties>
 
     <!-- 管理所有外部依赖 -->
