--- a/unityplatform-micromainpage/mainpage-domain/pom.xml
+++ b/unityplatform-micromainpage/mainpage-domain/pom.xml
@@ -47,8 +47,6 @@
             <groupId>com.golden</groupId>
             <artifactId>golden-java-sdk</artifactId>
             <version>${golden.version}</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/golden-java-sdk-3.0.34.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>commons-logging</groupId>
@@ -89,7 +87,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>easyexcel</artifactId>
-            <version>2.1.1</version>
+            <version>${easyexcel.version}</version>
         </dependency>
         <!--引入core模块-->
         <dependency>
