新增首页初始数据接口,性能优化

--- a/unityplatform-microfanscada/fanscada-app/src/main/resources/application-local.yml
+++ b/unityplatform-microfanscada/fanscada-app/src/main/resources/application-local.yml
@@ -19,7 +19,7 @@ mybatis:
 
 logging:
   level:
-    com.zhikuntech.intellimonitor.mainpage.domain.mapper: debug
+    com.zhikuntech.intellimonitor.fanscada.domain.mapper: debug
 
 
 
