--- a/intelli-monitor-parent/pom.xml
+++ b/intelli-monitor-parent/pom.xml
@@ -24,6 +24,7 @@
         <mybatis-plus.version>3.4.2</mybatis-plus.version>
         <easypoi.version>3.2.0</easypoi.version>
         <fastjson.version>1.2.27</fastjson.version>
+        <websocket.version>2.3.8.RELEASE</websocket.version>
         <!--golden相关依赖的版本号-->
         <golden.version>3.0.34</golden.version>
         <commons-logging.version>1.1.1</commons-logging.version>
@@ -129,6 +130,11 @@
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-openfeign</artifactId>
                 <version>${openfegin.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-websocket</artifactId>
+                <version>${websocket.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
