golden优化，easyexcel导出图片
golden server设置超时时间，catch golden socketException

--- a/unityplatform-micromainpage/mainpage-app/src/main/resources/application-local.yml
+++ b/unityplatform-micromainpage/mainpage-app/src/main/resources/application-local.yml
@@ -38,3 +38,7 @@ golden:
   password: golden
   poolSize: 25
   maxSize: 50
+
+template:
+  file:
+    path: unityplatform-micromainpage/mainpage-app/src/main/resources/template/
