--- a/intelli-monitor-parent/pom.xml
+++ b/intelli-monitor-parent/pom.xml
@@ -34,6 +34,8 @@
         <druid.version>1.1.10</druid.version>
         <jsch.version>0.1.55</jsch.version>
         <openfegin.version>2.2.8.RELEASE</openfegin.version>
+        <validation.version>2.0.1.Final</validation.version>
+        <hibernate-validator.version>6.0.17.Final</hibernate-validator.version>
     </properties>
 
     <!-- 管理所有外部依赖 -->
