--- a/unityplatform-microwindpowerforecast/windpowerforecast-prototype/pom.xml
+++ b/unityplatform-microwindpowerforecast/windpowerforecast-prototype/pom.xml
@@ -11,5 +11,20 @@
 
     <artifactId>windpowerforecast-prototype</artifactId>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/io.swagger/swagger-annotations -->
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.fasterxml.jackson.datatype</groupId>-->
+<!--            <artifactId>jackson-datatype-jsr310</artifactId>-->
+<!--        </dependency>-->
+    </dependencies>
 
 </project>
