--- a/unityplatform-micromainpage/mainpage-app/src/main/resources/application-local.yml
+++ b/unityplatform-micromainpage/mainpage-app/src/main/resources/application-local.yml
@@ -27,6 +27,7 @@ eureka:
   client:
     service-url:
       defaultZone: http://127.0.0.1:8761/eureka/
+      fetch-registry: true #是否从注册中心服务注册信息
   instance:
     prefer-ip-address: true
     instance-id: ${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
