--- a/unityplatform-microgateway/gateway-app/src/main/resources/application-local.yml
+++ b/unityplatform-microgateway/gateway-app/src/main/resources/application-local.yml
@@ -22,6 +22,10 @@ spring:
           uri: lb://fanscada-app
           predicates:
             - Path=/fanscada-app/**
+        - id: fanscada-app
+          uri: lb:ws//fanscada-app
+          predicates:
+            - Path=/fanscada-app/websocket/**
           filters:
             - StripPrefix=1
         - id: wind-power-forecast-app
