--- a/unityplatform-micromainpage/mainpage-app/src/main/resources/application-local.yml
+++ b/unityplatform-micromainpage/mainpage-app/src/main/resources/application-local.yml
@@ -43,3 +43,7 @@ golden:
 template:
   file:
     path: unityplatform-micromainpage/mainpage-app/src/main/resources/template/
+
+ribbon:
+  ConnectTimeout: 5000
+  ReadTimeout: 5000
