--- a/unityplatform-microwindpowerforecast/windpowerforecast-app/src/main/resources/application.yml
+++ b/unityplatform-microwindpowerforecast/windpowerforecast-app/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   profiles:
-#    active: local
-    active: dev
+    active: local
+#    active: dev
   application:
     name: wind-power-forecast-app
 
