--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>unityplatform-microregistrycenter</module>
         <module>unityplatform-micromainpage</module>
         <module>unityplatform-microfanscada</module>
+        <module>unityplatform-microalarm</module>
     </modules>
 
     <properties>
