--- a/unityplatform-core/core-stream/pom.xml
+++ b/unityplatform-core/core-stream/pom.xml
@@ -11,5 +11,20 @@
 
     <artifactId>core-stream</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+<!--            <version>2.6.9</version>-->
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
 
 </project>
