feat 添加告警信息配置文件

--- a/unityplatform-microalarm/alarm-app/pom.xml
+++ b/unityplatform-microalarm/alarm-app/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>alarm-app</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.zhikuntech.intellimonitor</groupId>
+            <artifactId>alarm-domain</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
