--- a/unityplatform-microalarm/pom.xml
+++ b/unityplatform-microalarm/pom.xml
@@ -19,5 +19,14 @@
         <module>alarm-facade</module>
     </modules>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.zhikuntech.intellimonitor</groupId>
+                <artifactId>alarm-domain</artifactId>
+                <version>${intelli-monitor.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
