--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>unityplatform-micromainpage</module>
         <module>unityplatform-microfanscada</module>
         <module>unityplatform-microalarm</module>
+        <module>unityplatform-microwebsocket</module>
     </modules>
 
     <properties>
