--- a/unityplatform-microalarm/alarm-app/pom.xml
+++ b/unityplatform-microalarm/alarm-app/pom.xml
@@ -12,6 +12,12 @@
     <artifactId>alarm-app</artifactId>
 
     <dependencies>
+        <!-- Eureka Client -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.zhikuntech.intellimonitor</groupId>
             <artifactId>alarm-domain</artifactId>
